Fix the implementation

--- a/Assets/Main.html
+++ b/Assets/Main.html
@@ -8,5 +8,33 @@
 		<link rel="stylesheet" type="text/css" href="./Style.css" />
 	</head>
 	<body>
+		<div
+			style="
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 100%;
+				text-align: center;
+			">
+			<a
+				style="
+					display: inline-block;
+					margin: 10em;
+					padding: 1em;
+					width: 12em;
+					background: darkred;
+					color: white;
+					font-size: 64pt;
+					font-weight: bold;
+					text-decoration: none;
+				"
+				href="./Main.html"
+			>
+				Do not press the F5 key!
+				<hr />
+				Click here to restore
+			</a>
+		</div>
 	</body>
 </html>
